fixed dashboard desktop scrollbar height

--- a/rollio-react/src/scss/components/_dashboard.scss
+++ b/rollio-react/src/scss/components/_dashboard.scss
@@ -1,12 +1,17 @@
 .dashboard {
     &_desktop {
         width: 54.7%;
-        padding: 26px 24px;
+        padding: 26px 4px 0px 24px;
 
         &__top_info {
             width: 100%;
             margin-bottom: 24px;
         }
+    }
+
+    &__cards {
+        display: flex;
+        flex-wrap: wrap;    
     }
 
     &__card {
@@ -15,7 +20,9 @@
         background-color: gray;
         border: solid 0px;
         border-radius: 10px;
-        filter: drop-shadow(1px 2px 3px $rollioLightGrey);
+        margin-right: 24px;
+        margin-bottom: 24px;
+        filter: drop-shadow(1px 3px 2px $rollioLighterGrey);
 
         &_image {
             width: 100%;
